[tool.poetry]
name = "fastapi-asyncapi"
version = "0.1.0"
description = ""
authors = ["Matt Gilene <mdgilene@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
fastapi = "^0.66.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
